# Server-Application

./: .gitignore  AStar.cpp  AStar.h  BestFirstSearch.cpp  BestFirstSearch.h  Boot.h  BreadthFirstSearch.cpp  BreadthFirstSearch.h  CMakeLists.txt  CacheManager.cpp  CacheManager.h  Cell.cpp  Cell.h  ClientHandler.cpp  ClientHandler.h  DepthFirstSearch.cpp  DepthFirstSearch.h  DepthFirstSerach.cpp  DepthFirstSerach.h  FileCacheManager.cpp  FileCacheManager.h  MatrixProblem.cpp  MatrixProblem.h  MyClientHandler.cpp  MyClientHandler.h  MyParallelServer.cpp  MyParallelServer.h  MySerialServer.cpp  MySerialServer.h  MyTestClientHandler.cpp  MyTestClientHandler.h  ObjectAdapter.cpp  ObjectAdapter.h  Position.cpp  Position.h  Problem.cpp  Problem.h  README.md  Searchable.cpp  Searchable.h  (+14 more)
matrices/: AStar.txt  BFS.txt  BestFS.txt  DFS.txt  Matrix10x10.txt  Matrix15x15.txt  Matrix20x20.txt  Matrix25x25.txt  Matrix30x30.txt  Matrix35x35.txt  Matrix40x40.txt  Matrix45x45.txt  Matrix50x50.txt
